<resources>
    <string name="app_name">Clock-O-Mentia Patient</string>
    <string name="empty_name">Name cannot be empty</string>
    <string name="empty_username">Username cannot be empty</string>
    <string name="empty_dob">Please select your date of birth</string>
    <string name="empty_mobile_no">Enter your mobile number</string>
    <string name="invalid_mobile_no">Invalid mobile Number</string>
    <string name="empty_email">Enter your email</string>
    <string name="invalid_email">Invalid email pattern</string>
    <string name="empty_otp">Enter the otp you received"</string>
    <string name="invalid_otp">Invalid OTP Length</string>
    <string name="no_error">All Okay</string>
    <string name="empty_password">Enter Your Password</string>
    <string name="invalid_age">Please Enter a Valid Age</string>
    <string name="invalid_password">Password must have atleast 8 characters including a letter and a number</string>
    <!--    <string name="sp_name">name</string>-->
    <!--    <string name="sp_age">age</string>-->
    <!--    <string name="sp_email">email</string>-->
    <!--    <string name="sp_user_id">user id</string>-->
    <string name="user_details">userDetails</string>
    <string name="auth_token">authToken</string>
    <string name="your_location">Your Location</string>
    <string name="nearby_doctors">Nearby Doctors:</string>
    <string name="welcome">Welcome!</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="age">Age</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="old_user">Already Registered?</string>
    <string name="Login">Login</string>
    <string name="password_not_match">Passwords do not match</string>
    <string name="or">OR</string>
    <string name="sign_in_with_google">\t\t\t\tSign in with Google</string>
    <string name="new_user">New to Clock-O-Mentia?</string>
    <string name="register">Register</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="viewSelectedDoctor">View Selected Doctor</string>
    <string name="doctor_location">Doctor\'s Location</string>
    <string name="book_an_appointment">Book An Appointment</string>
    <string name="name">Name</string>
    <string name="add_image_of_n_your_report">Add Image of \n your report</string>
    <string name="click_to_choose">Click to choose</string>
    <string name="file_name">File Name</string>
    <string name="book_appointment_">Book Appointment!</string>
    <string name="awaiting">Awaiting</string>
    <string name="booked">Booked!</string>
    <string name="description">Description</string>
    <string name="selectedAppointment">selectedAppointment</string>
    <string name="meetingId">meeting-id</string>
</resources>